Enhance rendering and tidy up source
This update implements the copyTextureToBuffer function in CommandEncoder.js to enhance the rendering process. Additionally, removed the reference to AssetManager from scene classes and undertook the necessary updates in jsMain and commonMain files to support headless rendering. Cleaned up Application.kt file to support headless rendering and removed all warnings from compilerOptions. The changes lead to a more efficient rendering process and a cleaner codebase.